crates/syntax/tests/snapshots/tokenizer__lexer_simple float.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: lex(input)
---
[
    SpannedToken {
        span: 0..3,
        token: LiteralFloat(
            "1.1",
        ),
    },
]
