crates/syntax/tests/snapshots/tokenizer__lexer_tuple access.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: lex(input)
---
[
    SpannedToken {
        span: 0..3,
        token: Identifier(
            "foo",
        ),
    },
    SpannedToken {
        span: 3..4,
        token: SigilDot,
    },
    SpannedToken {
        span: 4..7,
        token: Identifier(
            "bar",
        ),
    },
]
