crates/syntax/tests/snapshots/tokenizer__string-3.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(r#\"\"string {{ with }} escaped bracket\"\"#)"
---
Ok(
    [
        Spanned {
            span: 34..35,
            val: LiteralString(
                [
                    Spanned {
                        span: 1..8,
                        val: Content,
                    },
                    Spanned {
                        span: 8..10,
                        val: EscapedCurlyOpen,
                    },
                    Spanned {
                        span: 10..16,
                        val: Content,
                    },
                    Spanned {
                        span: 16..18,
                        val: EscapedCurlyClose,
                    },
                    Spanned {
                        span: 18..34,
                        val: Content,
                    },
                ],
            ),
        },
    ],
)
