crates/syntax/tests/snapshots/tokenizer__string-6.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(r#\"\"string {more + complex} expression\"\"#)"
---
Ok(
    [
        Spanned {
            span: 35..36,
            val: LiteralString(
                [
                    Spanned {
                        span: 1..8,
                        val: Content,
                    },
                    Spanned {
                        span: 23..24,
                        val: FormatStart(
                            (
                                [
                                    Spanned {
                                        span: 9..13,
                                        val: Identifier,
                                    },
                                    Spanned {
                                        span: 14..15,
                                        val: OperatorAdd,
                                    },
                                    Spanned {
                                        span: 16..23,
                                        val: Identifier,
                                    },
                                ],
                                [],
                            ),
                        ),
                    },
                    Spanned {
                        span: 24..35,
                        val: Content,
                    },
                ],
            ),
        },
    ],
)
